# 4ke

./: .gitignore  CMakeLists.txt  CMakeLists_with_inline.txt  FourKEQ.cpp  FourKEQ.h  FourKLookAndFeel.cpp  FourKLookAndFeel.h  INLINE_DISPLAY_FIX.md  LV2DescriptorPatch.cpp  LV2ExtensionPatcher.cpp  LV2ExtensionPatcher.h  LV2ExtensionWrapper.cpp  LV2InlineDisplay.cpp  LV2InlineDisplay.h  LV2InlineDisplay_stub.cpp  Makefile  Makefile.lv2  PluginEditor.cpp  PluginEditor.h  README.md  SSL4KEQ.cpp  SSL4KEQ.h  SSL4KEQ.jucer  SSL4KEQ_vst3.cpp  SSLLookAndFeel.cpp  SSLLookAndFeel.h  build_all.sh  build_juce_lv2.sh  build_juce_minimal.sh  build_juce_unified.sh  build_vst3.sh  dsp.ttl  install_juce_deps.sh  juce_lv2_inline_patch.cpp  juce_lv2_patcher.cpp  lv2_descriptor_wrapper.c  lv2_inline_display_hook.c  lv2_inline_display_preload.c  lv2_inline_override.c  lv2_wrapper_override.cpp  (+21 more)
Source/: PluginProcessor.h
build_juce/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  juce_vst3_helper
build_juce/JUCE/: Makefile  cmake_install.cmake
build_juce/JUCE/modules/: Makefile  cmake_install.cmake
build_juce/JUCE/tools/: CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  Makefile  cmake_install.cmake
build_juce/JUCE/tools/modules/: Makefile
build_vst3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  juce_vst3_helper  test.cpp
build_vst3/JUCE/: JUCEExportConfig.cmake  Makefile  cmake_install.cmake
build_vst3/JUCE/modules/: Makefile  cmake_install.cmake
build_vst3/JUCE/tools/: CMakeCache.txt  JUCEToolsExport.cmake  Makefile  cmake_install.cmake
build_vst3/JUCE/tools/modules/: Makefile  cmake_install.cmake
lv2/lv2plug.in/ns/lv2core/: lv2.h
