cmake_minimum_required(VERSION 3.15)
project(FourKEQ VERSION 1.0.0)

# Set C++ standard
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Add JUCE subdirectory
add_subdirectory(/home/marc/Projects/JUCE ${CMAKE_CURRENT_BINARY_DIR}/JUCE)

# Define our VST3 and LV2 plugin target
juce_add_plugin(FourKEQ
    PLUGIN_NAME "4K EQ"
    PLUGIN_CODE FKEQ
    FORMATS VST3 LV2 AU Standalone
    PRODUCT_NAME "4K EQ"
    COMPANY_NAME "AudioPlugins"
    COMPANY_WEBSITE "https://example.com"
    COMPANY_EMAIL "info@example.com"
    PLUGIN_MANUFACTURER_CODE APlu
    PLUGIN_CODE FKEQ
    IS_SYNTH FALSE
    NEEDS_MIDI_INPUT FALSE
    NEEDS_MIDI_OUTPUT FALSE
    IS_MIDI_EFFECT FALSE
    EDITOR_WANTS_KEYBOARD_FOCUS FALSE
    COPY_PLUGIN_AFTER_BUILD TRUE
    VST3_CATEGORIES Fx EQ
    AU_MAIN_TYPE kAudioUnitType_Effect
    VST2_CATEGORY kPlugCategEffect
    LV2_URI https://example.com/plugins/fourkeq
    LV2_SHARED_LIBRARY_NAME FourKEQ
)

# Generate JUCE header
juce_generate_juce_header(FourKEQ)

# Add source files
target_sources(FourKEQ
    PRIVATE
        FourKEQ.cpp
        FourKEQ.h
        PluginEditor.cpp
        PluginEditor.h
        FourKLookAndFeel.cpp
        FourKLookAndFeel.h
)

# Set include directories
target_include_directories(FourKEQ
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
)

# Compile definitions
target_compile_definitions(FourKEQ
    PUBLIC
        JUCE_WEB_BROWSER=0
        JUCE_USE_CURL=0
        JUCE_VST3_CAN_REPLACE_VST2=0
        JUCE_DISPLAY_SPLASH_SCREEN=0
        JUCE_REPORT_APP_USAGE=0
        JUCE_STRICT_REFCOUNTEDPOINTER=1
)

# Link with JUCE modules
target_link_libraries(FourKEQ
    PRIVATE
        juce::juce_audio_basics
        juce::juce_audio_devices
        juce::juce_audio_formats
        juce::juce_audio_plugin_client
        juce::juce_audio_processors
        juce::juce_audio_utils
        juce::juce_core
        juce::juce_data_structures
        juce::juce_dsp
        juce::juce_events
        juce::juce_graphics
        juce::juce_gui_basics
        juce::juce_gui_extra
    PUBLIC
        juce::juce_recommended_config_flags
        juce::juce_recommended_lto_flags
        juce::juce_recommended_warning_flags
)

# Platform-specific settings
if(MSVC)
    target_compile_options(FourKEQ PRIVATE /W4 /WX-)
else()
    target_compile_options(FourKEQ PRIVATE -Wall -Wextra -Wpedantic)
endif()

# Set binary output directory
set_target_properties(FourKEQ PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
)
# Add linker wrapping for LV2 inline display support
if(TARGET FourKEQ_LV2)
    target_link_options(FourKEQ_LV2 PRIVATE
        -Wl,--wrap=lv2_descriptor
    )
endif()
